pgrx-unit-tests/tests/compile-fail/sql-translatable-invalid-pg-extern-positions.stderr
error[E0277]: the trait bound `u8: pgrx::callconv::RetAbi` is not satisfied
 --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:4:31
  |
4 | fn bad_bare_u8(_value: u8) -> u8 {
  |                               ^^ the trait `BoxRet` is not implemented for `u8`
  |
  = help: the following other types implement trait `BoxRet`:
            f32
            f64
            i16
            i32
            i64
            i8
  = note: required for `u8` to implement `pgrx::callconv::RetAbi`

error[E0277]: `u8` cannot be passed into a Postgres function as a Datum
 --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:4:16
  |
3 | #[pg_extern]
  | ------------ in this attribute macro expansion
4 | fn bad_bare_u8(_value: u8) -> u8 {
  |                ^^^^^^ the trait `ArgAbi<'_>` is not implemented for `u8`
  |
  = help: the following other types implement trait `ArgAbi<'fcx>`:
            f32
            f64
            i16
            i32
            i64
            i8
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
 --> $WORKSPACE/pgrx/src/callconv.rs
  |
  |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
  |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `u8: pgrx::callconv::RetAbi` is not satisfied
 --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:4:34
  |
3 |   #[pg_extern]
  |   ------------ in this attribute macro expansion
4 |   fn bad_bare_u8(_value: u8) -> u8 {
  |  __________________________________^
5 | |     0
6 | | }
  | |_^ the trait `BoxRet` is not implemented for `u8`
  |
  = help: the following other types implement trait `BoxRet`:
            f32
            f64
            i16
            i32
            i64
            i8
  = note: required for `u8` to implement `pgrx::callconv::RetAbi`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `()` cannot be passed into a Postgres function as a Datum
 --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:9:17
  |
8 | #[pg_extern]
  | ------------ in this attribute macro expansion
9 | fn bad_unit_arg(_value: ()) {}
  |                 ^^^^^^ the trait `ArgAbi<'_>` is not implemented for `()`
  |
  = help: the following other types implement trait `ArgAbi<'fcx>`:
            &'fcx T
            &'fcx [u8]
            &'fcx str
            &MemCx<'fcx>
            *mut FunctionCallInfoBaseData
            AnyArray
            AnyElement
            AnyNumeric
          and $N others
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
 --> $WORKSPACE/pgrx/src/callconv.rs
  |
  |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
  |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
  = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `std::result::Result<i32, std::io::Error>` cannot be passed into a Postgres function as a Datum
  --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:12:19
   |
11 | #[pg_extern]
   | ------------ in this attribute macro expansion
12 | fn bad_result_arg(_value: Result<i32, std::io::Error>) {}
   |                   ^^^^^^ the trait `ArgAbi<'_>` is not implemented for `std::result::Result<i32, std::io::Error>`
   |
   = help: the following other types implement trait `ArgAbi<'fcx>`:
             &'fcx T
             &'fcx [u8]
             &'fcx str
             &MemCx<'fcx>
             *mut FunctionCallInfoBaseData
             AnyArray
             AnyElement
             AnyNumeric
           and $N others
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `pgrx::prelude::SetOfIterator<'_, i32>` cannot be passed into a Postgres function as a Datum
  --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:15:18
   |
14 | #[pg_extern]
   | ------------ in this attribute macro expansion
15 | fn bad_setof_arg(_value: SetOfIterator<'static, i32>) {}
   |                  ^^^^^^ the trait `ArgAbi<'_>` is not implemented for `pgrx::prelude::SetOfIterator<'_, i32>`
   |
   = help: the following other types implement trait `ArgAbi<'fcx>`:
             &'fcx T
             &'fcx [u8]
             &'fcx str
             &MemCx<'fcx>
             *mut FunctionCallInfoBaseData
             AnyArray
             AnyElement
             AnyNumeric
           and $N others
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: `pgrx::prelude::TableIterator<'_, (i32,)>` cannot be passed into a Postgres function as a Datum
  --> tests/compile-fail/sql-translatable-invalid-pg-extern-positions.rs:18:18
   |
17 | #[pg_extern]
   | ------------ in this attribute macro expansion
18 | fn bad_table_arg(_value: TableIterator<'static, (name!(a, i32),)>) {}
   |                  ^^^^^^ the trait `ArgAbi<'_>` is not implemented for `pgrx::prelude::TableIterator<'_, (i32,)>`
   |
   = help: the following other types implement trait `ArgAbi<'fcx>`:
             &'fcx T
             &'fcx [u8]
             &'fcx str
             &MemCx<'fcx>
             *mut FunctionCallInfoBaseData
             AnyArray
             AnyElement
             AnyNumeric
           and $N others
note: required by a bound in `pgrx::callconv::Args::<'a, 'fcx>::next_arg_unchecked`
  --> $WORKSPACE/pgrx/src/callconv.rs
   |
   |     pub unsafe fn next_arg_unchecked<T: ArgAbi<'fcx>>(&mut self) -> Option<T> {
   |                                         ^^^^^^^^^^^^ required by this bound in `Args::<'a, 'fcx>::next_arg_unchecked`
   = note: this error originates in the attribute macro `pg_extern` (in Nightly builds, run with -Z macro-backtrace for more info)
